--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Specal Cakes</title>
+    <title>Special Cakes</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div id="contaner">
         <header>
-            <img src="img/logo.png" alt="our cakes taste better, links to home page">
+            <img src="img/logo.png" alt="Specal Cakes for all occasions, links to home page">
             <nav>
                 <span>Home</span>
                 <a href="about.html">About us</a>
