--- a/sale.html
+++ b/sale.html
@@ -9,7 +9,7 @@
 <body>
     <div id="contaner">
         <header>
-            <img src="img/logo.png" alt="our cakes taste better, links to home page">
+            <img src="img/logo.png" alt="Specal Cakes for all occasions, links to home page">
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About us</a>
