Adding missing banner photo

--- a/about.html
+++ b/about.html
@@ -9,13 +9,14 @@
 <body>
     <div id="contaner">
         <header>
-            <img src="img/logo.png" alt="our cakes taste better, links to home page">
+          <img src="img/logo.png" alt="Specal Cakes for all occasions, links to home page">
             <nav>
                 <a href="index.html">Home</a>
                 <span>About us</span>
                 <a href="sale.html">Cakes for sale</a>
                 <a href="contact.html">Contact us</a>
             </nav>
+            <img src="img/banner.png" alt="">
         </header>
         <main>
           
