--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p>23 Pacific Hwy, Sydney NSW<br><b>Phone</b>: 04198237<br><b>Email</b>: specialcakes@email.com</p>
             <h2>Bakery hours</h2>
             <p>Monday-Friday 8.30 am to 3 pm<br>Saturday and Sunday 8.30 am to 1 pm</p>
-            <img src="img/Wikidata_10th_birthday_-_Wikimedia_NYC_cake,_head-on bigger.jpg" alt="Cake with the Wikidata logo printed on it, smaller frosting circle reads 'I love Q60'">
+            <img src="img/Wikidata_10th_birthday_-_Wikimedia_NYC_cake,_head-on_bigger.jpg" alt="Cake with the Wikidata logo printed on it, smaller frosting circle reads 'I love Q60'">
         </main>
         
         <footer>
