then fix the code

--- a/sale.html
+++ b/sale.html
@@ -19,15 +19,15 @@
             <img src="img/banner.png" alt="Special Cakes for all Occasions, links to home page">
         </header>
         <main>
-            <a href="img/pexels-abhinavcoca-291528.jpg"><img src="img/pexels-abhinavcoca-291528 small.jpg" alt="Close-up of a rich chocolate cake slice with blueberry "></a>
-            <a href="img/Peng_Zu_restaurant_at_the_Suncoast,_Las_Vegas_(Summerlin)._I_had_the_mango_cake_for_dessert.jpg"><img src="img/Peng_Zu_restaurant_at_the_Suncoast,_Las_Vegas_(Summerlin)._I_had_the_mango_cake_for_dessert smaller.jpg" alt="mango cake with white iceing, with strawberys and whiped cream at the top. Also has some Strawberry jam."></a>
-            <a href="img/pexels-brent-keane-181485-1702373.jpg"><img src="img/pexels-brent-keane-181485-1702373 small.jpg" alt="typical white weding cake"></a>
-            <a href="img/img/pexels-dzeninalukac-1366710.jpg"><img src="img/pexels-dzeninalukac-1366710 small.jpg" alt="Close-up of a decadent coffee and walnut layered cake slice on a plate"></a>
-            <a href="img/pexels-ozrenildo-1291712.jpg"><img src="img/pexels-ozrenildo-1291712 small.jpg" alt="Delicious layered chocolate cake with fresh berries and peanut butter cream on a plate"></a>
-            <a href="img/pexels-sophia-martin-1233444864-22764288.jpg"><img src="img/pexels-sophia-martin-1233444864-22764288 small.jpg" alt="delectable chocolate drip cake topped with fresh fruits"></a>
-            <a href="img/pexels-suzyhazelwood-1126359.jpg"><img src="img/pexels-suzyhazelwood-1126359 small.jpg" alt="slice of cheesecake topped with berries"></a>
-            <a href="img/pexels-valeriya-14105.jpg"><img src="img/pexels-valeriya-14105 small.jpg" alt="Free Vibrant cupcakes topped with colorful icing and sprinkles on a countertop."></a>
-            <a href="img/pexels-valeriya-827513"><img src="img/pexels-valeriya-827513 small.jpg" alt="Sliced berry cheesecake topped with vibrant fresh berries and served on a decorative plate"></a>
+            <a href="img/pexels-abhinavcoca-291528.jpg"><img src="img/pexels-abhinavcoca-291528_small.jpg" alt="Close-up of a rich chocolate cake slice with blueberry "></a>
+            <a href="img/Peng_Zu_restaurant_at_the_Suncoast,_Las_Vegas_(Summerlin)._I_had_the_mango_cake_for_dessert.jpg"><img src="img/Peng_Zu_restaurant_at_the_Suncoast,_Las_Vegas_(Summerlin)._I_had_the_mango_cake_for_dessert_small.jpg" alt="mango cake with white iceing, with strawberys and whiped cream at the top. Also has some Strawberry jam."></a>
+            <a href="img/pexels-brent-keane-181485-1702373.jpg"><img src="img/pexels-brent-keane-181485-1702373_small.jpg" alt="typical white weding cake"></a>
+            <a href="img/img/pexels-dzeninalukac-1366710.jpg"><img src="img/pexels-dzeninalukac-1366710_small.jpg" alt="Close-up of a decadent coffee and walnut layered cake slice on a plate"></a>
+            <a href="img/pexels-ozrenildo-1291712.jpg"><img src="img/pexels-ozrenildo-1291712_small.jpg" alt="Delicious layered chocolate cake with fresh berries and peanut butter cream on a plate"></a>
+            <a href="img/pexels-sophia-martin-1233444864-22764288.jpg"><img src="img/pexels-sophia-martin-1233444864-22764288_small.jpg" alt="delectable chocolate drip cake topped with fresh fruits"></a>
+            <a href="img/pexels-suzyhazelwood-1126359.jpg"><img src="img/pexels-suzyhazelwood-1126359_small.jpg" alt="slice of cheesecake topped with berries"></a>
+            <a href="img/pexels-valeriya-14105.jpg"><img src="img/pexels-valeriya-14105_small.jpg" alt="Free Vibrant cupcakes topped with colorful icing and sprinkles on a countertop."></a>
+            <a href="img/pexels-valeriya-827513"><img src="img/pexels-valeriya-827513_small.jpg" alt="Sliced berry cheesecake topped with vibrant fresh berries and served on a decorative plate"></a>
             <h1>Welcome to Specal Cakes for all Occasions</h1>
             
             <h3>We have the cakes for all your special events</h3>
