--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
             <h1>Get in touch with us</h1>
             
             <p>Special Cakes for All Occasions started a year ago by the store owner, Sam Rice, who wanted to share their love of baking with the world. Come and taste all the delightful cakes!</p>
-            <img src="img/brownie300.jpg" alt="A brownie cake with cocolate source on top">
+            <a href="img/pexels-sophia-martin-1233444864-22764288.jpg"><img src="img/pexels-sophia-martin-1233444864-22764288_small.jpg" alt="delectable chocolate drip cake topped with fresh fruits"></a>
             <form action="success.html">
                 <label for="fname">First name:</label><br>
                 <input type="text" id="fname" name="fname"><br>
