fix these links

--- a/sale.html
+++ b/sale.html
@@ -9,14 +9,14 @@
 <body>
     <div id="contaner">
         <header>
-            <img src="img/logo.png" alt="Specal Cakes for all occasions, links to home page">
+            <a href="index.html"><img src="img/logo.png" alt="Specal Cakes for all occasions, links to home page"></a>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About us</a>
                 <span>Cakes for sale</span>
                 <a href="contact.html">Contact us</a>
             </nav>
-            <img src="img/banner.png" alt="Special Cakes for all Occasions, links to home page">
+            <img src="img/banner.png" alt="Chocolate cake with cream and strawberries">
         </header>
         <main>
             <a href="img/pexels-abhinavcoca-291528.jpg"><img src="img/pexels-abhinavcoca-291528_small.jpg" alt="Close-up of a rich chocolate cake slice with blueberry "></a>
