--- a/about.html
+++ b/about.html
@@ -9,14 +9,14 @@
 <body>
     <div id="contaner">
         <header>
-          <img src="img/logo.png" alt="Specal Cakes for all occasions, links to home page">
+          <a href="index.html"><img src="img/logo.png" alt="Specal Cakes for all occasions, links to home page"></a>
             <nav>
                 <a href="index.html">Home</a>
                 <span>About us</span>
                 <a href="sale.html">Cakes for sale</a>
                 <a href="contact.html">Contact us</a>
             </nav>
-            <img src="img/banner.png" alt="">
+            <img src="img/banner.png" alt="Chocolate cake with cream and strawberries">
         </header>
         <main>
           
