--- a/contact.html
+++ b/contact.html
@@ -9,14 +9,14 @@
 <body>
     <div id="contaner">
         <header>
-            <img src="img/logo.png" alt="Specal Cakes for all occasions, links to home page">
+            <a href="index.html"><img src="img/logo.png" alt="Specal Cakes for all occasions, links to home page"></a>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="sale.html">About us</a>
                 <a href="sale.html">Cakes for sale</a>
                 <span>Contact us</span>
             </nav>
-            <img src="img/banner.png" alt="Special Cakes for all Occasions, links to home page">
+            <img src="img/banner.png" alt="Chocolate cake with cream and strawberries">
         </header>
         <main>
           
