--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
     <div id="contaner">
         <header>
-            <img src="img/logo.png" alt="Specal Cakes for all occasions, links to home page">
+            <a href="index.html"><img src="img/logo.png" alt="Specal Cakes for all occasions, links to home page"></a>
             <nav>
                 <span>Home</span>
                 <a href="about.html">About us</a>
                 <a href="sale.html">Cakes for sale</a>
                 <a href="contact.html">Contact us</a>
             </nav>
-            <img src="img/banner.png" alt="Special Cakes for all Occasions, links to home page">
+            <img src="img/banner.png" alt="SChocolate cake with cream and strawberries">
         </header>
         <main>
           
